finished basic functionality

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html ng-app="polApp">
 <head>
 	<title>No-server Project</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body>
+<body ng-controller="polCtrl">
 <div class="container">
 	<div class="jumbotron">
 	  <h1>Find your representatives!</h1>
@@ -13,39 +13,17 @@
 	</div>
 </div>
 
-<div class="container">
-	<div class="row">
-	  <div class="col-lg-6 col-lg-offset-3">
-	    <div class="input-group">
-	      <div class="input-group-btn">
-	        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search By <span class="caret"></span></button>
-	        <ul class="dropdown-menu">
-	          <li><a href="#">Zip Code</a></li>
-	          <li><a href="#">Name</a></li>
-	        </ul>
-	      </div><!-- /btn-group -->
-	      <input type="text" class="form-control" aria-label="...">
-	    </div><!-- /input-group -->
-	  </div><!-- /.col-lg-6 -->
-  </div>
-</div>
+<ng-view></ng-view>
 
-<div class="container">
-	<div class="row" ng-repeat="rep in representatives">
-		<div class="col-lg-12 well">
-			<div class="col-lg-3">{{rep.name}}</div>
-			<div class="col-lg-2">{{rep.phone}}</div>
-			<div class="col-lg-2">{{rep.website}}</div>
-			<div class="col-lg-3">{{rep.office}}</div>
-			<div class="col-lg-2">{{rep.contact_form}}</div>
-		</div>
-	</div>
-</div>
+
 <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-route.js"></script>
 <script src="./js/app.js"></script>
 <script src="./js/MainController.js"></script>
 <script src="./js/mainService.js"></script>
+<script src="./routes/zipController.js"></script>
+<script src="./routes/nameController.js"></script>
 </body>
 </html>
