--- a/routes/nameRoute.html
+++ b/routes/nameRoute.html
@@ -7,25 +7,21 @@
 	<br>
 	<div class="row">
 	  <div class="col-lg-6 col-lg-offset-3">
+	  <form ng-submit="nameSearch()">
 	    <div class="input-group">
 	      <span class="input-group-btn">
 	        <button class="btn btn-default" type="button" ng-click="nameSearch()">Search!</button>
 	      </span>
-	      <input type="text" class="form-control" placeholder="Search by name..." ng-model="nameSearchBox" ng-submit="nameSearch()">
+	      <input type="text" class="form-control" placeholder="Search by name..." ng-model="nameSearchBox">
 	    </div><!-- /input-group -->
+    </form>
 	  </div><!-- /.col-lg-6 -->
 	</div><!-- /.row -->
 </div>
 <hr>
 <div class="container">
 	<div class="row" ng-repeat="rep in representatives">
-		<div class="col-lg-12 well">
-			<div class="col-lg-2">{{rep.title}} {{rep.first_name}} {{rep.last_name}}</div>
-			<div class="col-lg-1">{{rep.state}}</div>
-			<div class="col-lg-2">{{rep.phone}}</div>
-			<div class="col-lg-2"><a href="{{rep.website}}"><button type="button" class="btn btn-default">Website</button></a></div>
-			<div class="col-lg-3">{{rep.office}}</div>
-			<div class="col-lg-2"><a href="{{rep.contact_form}}"><button type="button" class="btn btn-default">Contact Form</button></a></div>
-		</div>
+		<results-dir search="committeeSearch" rep="rep"></results-dir>
+		<committee ng-show="showCommittee"></committee>
 	</div>
 </div>
