got committees feature working, still needs tweaking

--- a/js/directives/resultsTmpl.html
+++ b/js/directives/resultsTmpl.html
@@ -5,4 +5,5 @@
 	<div class="col-lg-2"><a href="{{rep.website}}"><button type="button" class="btn btn-default">Website</button></a></div>
 	<div class="col-lg-3">{{rep.office}}</div>
 	<div class="col-lg-2"><a href="{{rep.contact_form}}"><button type="button" class="btn btn-default">Contact Form</button></a></div>
+	<rep-committees ng-show="showCommittee" committees="committees"></rep-committees>
 </div>
