Updated jumbotron and committee results box

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="container">
 	<div class="jumbotron">
 	  <h1>Find your representatives!</h1>
-	  <h3>Quickly get the name, phone number, email, and other information about the people representing you in Washington DC</h3>
+	  <h3>Quickly get the name, phone number, email, and other information about the people representing you in Washington DC. Click on a representative for a list of committees they serve on</h3>
 	</div>
 </div>
 
