--- a/routes/zipRoute.html
+++ b/routes/zipRoute.html
@@ -21,6 +21,6 @@
 <hr>
 <div class="container">
 	<div class="row" ng-repeat="rep in representatives">
-		<results-dir></results-dir>
+		<results-dir search="committeeSearch" rep="rep" showCommittee="false" committees="committees"></results-dir>
 	</div>
 </div>
