--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="container">
 	<div class="jumbotron">
 	  <h1>Find your representatives!</h1>
-	  <h3>Quickly get the name, phone number, email, and other information about the people representing you in Washington DC. Click on a representative for a list of committees they serve on</h3>
+	  <h3>Quickly get the name, phone number, email, and other information about the people representing you in Washington DC. Click on a representative for a list of committees they serve on and bills they have recently sponsored.</h3>
 	</div>
 </div>
 
@@ -23,9 +23,11 @@
 <script src="./js/app.js"></script>
 <script src="./js/mainService.js"></script>
 <script src="./js/committeeService.js"></script>
+<script src="./js/billService.js"></script>
 <script src="./routes/zipController.js"></script>
 <script src="./routes/nameController.js"></script>
 <script src="./js/directives/resultsDir.js"></script>
 <script src="./js/directives/committeesDir.js"></script>
+<script src="./js/directives/billsDir.js"></script>
 </body>
 </html>
