--- a/js/directives/resultsTmpl.html
+++ b/js/directives/resultsTmpl.html
@@ -5,5 +5,8 @@
 	<div class="col-lg-2"><a href="{{rep.website}}"><button type="button" class="btn btn-default">Website</button></a></div>
 	<div class="col-lg-3">{{rep.office}}</div>
 	<div class="col-lg-2"><a href="{{rep.contact_form}}"><button type="button" class="btn btn-default">Contact Form</button></a></div>
+
+	<!-- committee and bill custom directives -->
 	<rep-committees ng-show="showCommittee" committees="committees"></rep-committees>
+	<rep-bills ng-show="showCommittee" bills="bills"></rep-bills>
 </div>
