users can now click on bills to open up bill content in a new window

--- a/js/directives/billsTmpl.html
+++ b/js/directives/billsTmpl.html
@@ -1,4 +1,4 @@
 <div class="col-lg-6 well">
 	<h2>Bills:</h2>
-	<p ng-repeat="bill in bills">{{bill.short_title || bill.official_title}}</p>
+	<p ng-repeat="bill in bills"><a href="{{bill.last_version.urls.html}}" target="_blank">{{bill.short_title || bill.official_title}}</a></p>
 </div>
