--- a/routes/zipRoute.html
+++ b/routes/zipRoute.html
@@ -1,5 +1,5 @@
 <div class="container">
-<h2 style="color: white">Search By:</h2>
+<h2>Search By:</h2>
 	<ul class="nav nav-tabs">
 	  <li role="presentation" class="active"><a href="#/zipSearch">Zip</a></li>
 	  <li role="presentation"><a href="#/nameSearch">Name</a></li>
