improved styling and wording, added minimal footer

--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 <div class="container">
 	<div class="jumbotron">
 	  <h1>Find your representatives!</h1>
-	  <h3>Quickly get the name, phone number, email, and other information about the people representing you in Washington DC. Click on a representative for a list of committees they serve on and bills they have recently sponsored.</h3>
+	  <h3>Quickly get the contact information of the people representing you in Washington DC. Click on a representative for a list of committees they serve on and bills they have recently sponsored.</h3>
 	</div>
 </div>
 
 <ng-view></ng-view>
 
+<div class="container footer">
+	<div class="row">
+		<div class="col-lg-12">
+			<footer>No server project <strong>-</strong> Spencer Davies <strong>-</strong> 2015</footer>
+		</div>
+	</div>
+</div>
 
 <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
