--- a/js/directives/resultsTmpl.html
+++ b/js/directives/resultsTmpl.html
@@ -1,5 +1,5 @@
 <div class="col-lg-12 well result">
-	<div class="col-lg-2">{{rep.title}} {{rep.first_name}} {{rep.last_name}}</div>
+	<div class="col-lg-2">{{rep.title}} {{rep.first_name}} {{rep.last_name}} ({{rep.party}})</div>
 	<div class="col-lg-1">{{rep.state}}</div>
 	<div class="col-lg-2">{{rep.phone}}</div>
 	<div class="col-lg-2"><a href="{{rep.website}}"><button type="button" class="btn btn-default">Website</button></a></div>
