--- a/js/directives/committeesTmpl.html
+++ b/js/directives/committeesTmpl.html
@@ -1,4 +1,4 @@
-<div class="col-lg-6 well">
+<div class="col-lg-6">
 <h2>Committees:</h2>
 	<p ng-repeat="committee in committees">{{committee.name}}</p>
 </div>
